# FastMedApp

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.env  pyproject.toml
backend/: client_secret_google.json  db.sqlite3
backend/config/: settings.py  urls.py
backend/src/profiles/: admin.py  models.py  routers.py  serializers.py  urls.py  views.py
backend/src/profiles/migrations/: 0001_initial.py  0002_alter_usernet_phonenumber.py
backend/src/social_auth/: google.py  register.py  routers.py  serializers.py  views.py
frontend/: package-lock.json  package.json
frontend/src/: fonts.scss  index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/common-ui/header/: header.component.html  header.component.scss  header.component.ts
frontend/src/app/common-ui/layout/: layout.component.ts
frontend/src/app/common-ui/sidebar/: sidebar.component.html  sidebar.component.ts
frontend/src/app/common-ui/svg-icons/: svg-icons.component.ts
frontend/src/app/pages/home-page/: home-page.component.html  home-page.component.ts
