[tool.poetry]
name = "fastmedapp"
version = "0.1.0"
description = "A fast medical support application implemented using django and angular"
authors = ["BloodCharry <vladvorobei1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
djangorestframework = "^3.15.2"
pillow = "^10.4.0"
psycopg2 = "^2.9.9"
djoser = "^2.2.3"
simplejwt = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
